# more-mpi

./: CMakeLists.txt  README.md  blur_test_1_expected_output.txt  blur_test_2_expected_output.txt  blur_test_2_input.txt  blur_test_3_expected_output.txt  blur_test_3_input.txt  compile_and_run.sh  generateData.js  homework02.html  run_blur.sh  run_discussion.sh
src/: blur.c  discussion.c
